--- a/Loan Approval.ipynb
+++ b/Loan Approval.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "id": "2xCqEAP8ZHJs"
    },
    "source": [
@@ -15,7 +14,6 @@
    "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true,
-    "hidden": true,
     "id": "J2e-SaafZNVG"
    },
    "source": [
@@ -767,7 +765,6 @@
    "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true,
-    "hidden": true,
     "id": "o7bUpv2Cqj4J"
    },
    "source": [
@@ -1192,7 +1189,6 @@
    "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true,
-    "hidden": true,
     "id": "kkWgOZ3-GCRc"
    },
    "source": [
@@ -1407,7 +1403,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
+    "heading_collapsed": true,
     "id": "izb3eE1Z31tL"
    },
    "source": [
@@ -1926,7 +1922,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
+    "heading_collapsed": true,
     "id": "J2sMEPj_NwEl"
    },
    "source": [
@@ -3638,7 +3634,8 @@
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -3681,15 +3678,6 @@
     "\n",
     "ConfusionMatrixDisplay.from_predictions(y_test, y_preds, cmap='Blues');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
